fix corrupted rendering on ios

--- a/_sass/_math.scss
+++ b/_sass/_math.scss
@@ -1,9 +1,18 @@
+// long display equations
 .MathJax {
     padding:0.25em;
     overflow-x:auto;
     overflow-y: hidden;
     min-width: 0 ! important;
     max-width: 100%;
+}
+
+// fix corrupted rendering on ios
+mjx-container, mjx-container *, mjx-container *::before, mjx-container *::after {
+    box-sizing: unset; /* or any value, really */
+}
+mjx-c::before {
+    will-change: opacity;
 }
 
 .thm {
